--- a/.github/workflows/product-catalog-ci.yaml
+++ b/.github/workflows/product-catalog-ci.yaml
@@ -1,9 +1,12 @@
 name: product-catalog-service-ci
 
 on:
-  pull_request:
-    branches:
-      - main
+  push:
+    paths:
+      - '.github/workflows/checkout.yaml'
+      - 'src/checkout/**'
+  #pull_request:
+    #branches: [main]
 
 jobs:
   # ✅ 1. Unit Testing
@@ -77,8 +80,8 @@ jobs:
         run: |
           docker push asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/productcatalogservice:${{ github.sha }}
 
-  # ✅ 4. Update K8s Manifest with New Image
-  k8s-update:
+  # ✅ 4 & 5. Update K8s Manifest and Git Commit+Push
+  update-k8s-and-push:
     runs-on: ubuntu-latest
     needs: docker-build-push
     steps:
@@ -87,23 +90,21 @@ jobs:
         with:
           token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
 
-      - name: Update image in Kubernetes manifest
-        run: |
-          sed -i "s|image: .*|image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/productcatalogservice:${{ github.sha }}|" kubernetes/product-catalog/deployment.yaml
-          cat k8s/product-catalog/deployment.yaml
-
-  # ✅ 5. Git Commit + Push
-  commit-and-push:
-    runs-on: ubuntu-latest
-    needs: k8s-update
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Commit updated manifest
+      - name: Update manifest and commit changes
         run: |
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "mokadi surya prasad"
+
+          # Update image
+          sed -i "s|image: .*|image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/productcatalogservice:${{ github.sha }}|" kubernetes/product-catalog/deployment.yaml
+          echo "Updated Manifest:"
+          cat kubernetes/product-catalog/deployment.yaml
+
+          # Commit only if there are changes
           git add kubernetes/product-catalog/deployment.yaml
-          git commit -m "[CI] Update product-catalog deployment image tag"
-          git push
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+          else
+            git commit -m "[CI] Update product-catalog deployment image tag"
+            git push
+          fi
