--- a/.github/workflows/product-catalog-ci.yaml
+++ b/.github/workflows/product-catalog-ci.yaml
@@ -9,7 +9,7 @@ on:
     #branches: [main]
 
 jobs:
-  # ✅ 1. Unit Testing
+  # ✅ Stage 1: Unit Testing
   unit-testing:
     runs-on: ubuntu-latest
     steps:
@@ -17,33 +17,44 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v4
         with:
           go-version: 1.22
 
-      - name: Build & Unit Test
+      - name: Build
         run: |
-          cd src/product-catalog
+          cd src/checkout
           go mod download
-          go build -o product-catalog-service main.go
+          go build -o checkout main.go
+
+      - name: Run unit tests
+        run: |
+          cd src/checkout
           go test -v ./...
 
-  # ✅ 2. Lint / Code Quality Check
+  # ✅ Stage 2: Code Quality with golangci-lint
   code-quality:
     runs-on: ubuntu-latest
+    continue-on-error: true  # Allow the pipeline to continue even if linting fails
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v4
         with:
           go-version: 1.22
 
       - name: Install golangci-lint
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
-          golangci-lint run src/product-catalog/...
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.56.2
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
+      - name: Run golangci-lint with config file
+        working-directory: ./src/checkout
+        run: |
+            go mod tidy
+            golangci-lint run --config .golangci.yml --timeout 5m
 
   # ✅ 3. Docker Build, Trivy Scan, and Push to GAR
   docker-build-push:
