--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -79,7 +79,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/frontend:${{ github.sha }} -f src/frontend/Dockerfile
+          docker build -t asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/frontend:${{ github.sha }} -f src/frontend/Dockerfile .
 
       - name: Scan Docker Image with Trivy
         uses: aquasecurity/trivy-action@master
