--- a/.github/workflows/ad.yaml
+++ b/.github/workflows/ad.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run unit tests with stacktrace
         working-directory: ./src/ad
-        run: ./gradlew test
+        run: ./gradlew build --warning-mode all --info
 
   # ✅ Stage 2: Code Quality
   code-quality:
