ad yaml file added

--- a/.github/workflows/ad.yaml
+++ b/.github/workflows/ad.yaml
@@ -84,6 +84,7 @@ jobs:
           format: table
           exit-code: '1'
           ignore-unfixed: true
+          vulnerability-type: 'os,library'
 
       - name: Push Docker Image to GAR
         run: |
