--- a/.github/workflows/ad.yaml
+++ b/.github/workflows/ad.yaml
@@ -90,8 +90,7 @@ jobs:
         run: |
           docker push asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/ad:${{ github.sha }}
 
-  # ✅ Stage 4: Kubernetes YAML Auto-Update
-  k8s-update:
+  update-and-push-k8s:
     runs-on: ubuntu-latest
     needs: docker-build-push
     steps:
@@ -100,25 +99,13 @@ jobs:
         with:
           token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
 
-      - name: Update ad-service image tag in deployment YAML
-        run: |
-          sed -i "s|image: .*|image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/ad:${{ github.sha }}|" kubernetes/ad/deploy.yaml
-          cat kubernetes/ad/deploy.yaml
-
-    # ✅ Stage 5: Commit and Push Updated K8s Manifest
-  git-commit-push:
-    runs-on: ubuntu-latest
-    needs: k8s-update
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
-
-      - name: Configure Git and Push
+      - name: Update ad-service image tag and push if changed
         run: |
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "mokadi surya prasad"
+
+          sed -i "s|image: .*|image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/ad:${{ github.sha }}|" kubernetes/ad/deploy.yaml
+          
           git add kubernetes/ad/deploy.yaml
 
           # Commit only if there are actual changes
