--- a/.github/workflows/ad.yaml
+++ b/.github/workflows/ad.yaml
@@ -14,6 +14,7 @@ on:
       - 'src/ad/**'
 
 jobs:
+  # ✅ Stage 1: Unit Testing
   unit-testing:
     runs-on: ubuntu-latest
     steps:
@@ -57,7 +58,7 @@ jobs:
   # ✅ Stage 3: Docker Build, Trivy Scan, and Push to Google Artifact Registry
   docker-build-push:
     runs-on: ubuntu-latest
-    needs: code-quality  # Now depends on the code-quality job
+    needs: code-quality
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -90,6 +91,7 @@ jobs:
         run: |
           docker push asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/ad:${{ github.sha }}
 
+  # ✅ Stage 4: Update Kubernetes YAML and Push if Changed
   update-and-push-k8s:
     runs-on: ubuntu-latest
     needs: docker-build-push
@@ -104,8 +106,10 @@ jobs:
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "mokadi surya prasad"
 
+          # Update the image tag in deploy.yaml
           sed -i "s|image: .*|image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/ad:${{ github.sha }}|" kubernetes/ad/deploy.yaml
 
+          # Add changes
           git add kubernetes/ad/deploy.yaml
 
           # Commit only if there are actual changes
