ad yaml file added

--- a/.github/workflows/ad.yaml
+++ b/.github/workflows/ad.yaml
@@ -118,3 +118,4 @@ jobs:
             git push
           else
             echo "No changes detected in deploy.yaml. Skipping commit and push."
+          fi  # <-- Missing 'fi' to close the 'if' block
