--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -59,7 +59,7 @@ jobs:
   # ✅ Stage 4: Docker Build, Trivy Scan, and Push to Google Artifact Registry
   docker-build-push:
     runs-on: ubuntu-latest
-    needs: code-build
+    needs: code-quality  # Updated from code-build to code-quality
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -91,33 +91,35 @@ jobs:
         run: |
           docker push asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/checkout:${{ github.sha }}
 
-  # ✅ Stage 5: Kubernetes YAML Auto-Update
-  k8s-update:
-    runs-on: ubuntu-latest
-    needs: docker-build-push
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
+# ✅ Stage 5: Update Kubernetes YAML and Commit & Push if Changed
+update-and-commit-push-k8s:
+  runs-on: ubuntu-latest
+  needs: docker-build-push
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
 
-      - name: Update checkout-service image tag in deployment YAML
-        run: |
-          sed -i "s|image: .*|image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/checkout:${{ github.sha }}|" kubernetes/checkout/deploy.yaml
-          cat kubernetes/checkout/deploy.yaml
+    - name: Update checkout-service image tag in deployment YAML
+      run: |
+        # Update the image tag in deploy.yaml
+        sed -i "s|image: .*|image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/checkout:${{ github.sha }}|" kubernetes/checkout/deploy.yaml
+        cat kubernetes/checkout/deploy.yaml
 
-  # ✅ Stage 6: Commit and Push Updated Kubernetes Manifest
-  git-commit-push:
-    runs-on: ubuntu-latest
-    needs: k8s-update
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+    - name: Configure Git and Commit & Push Changes
+      run: |
+        # Configure Git
+        git config --global user.email "mspr9773@gmail.com"
+        git config --global user.name "mokadi surya prasad"
 
-      - name: Configure Git and Push
-        run: |
-          git config --global user.email "mspr9773@gmail.com"
-          git config --global user.name "mokadi surya prasad"
-          git add kubernetes/checkout/deploy.yaml
+        # Add changes to git and commit only if there are actual changes
+        git add kubernetes/checkout/deploy.yaml
+
+        # Commit and push changes only if there are differences
+        if ! git diff --cached --quiet; then
           git commit -m "[CI] Update checkout image tag to ${{ github.sha }}"
           git push
+        else
+          echo "No changes detected in deploy.yaml. Skipping commit and push."
+        fi
