--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -35,6 +35,7 @@ jobs:
   # ✅ Stage 2: Code Quality with golangci-lint
   code-quality:
     runs-on: ubuntu-latest
+    continue-on-error: true  # Allow the pipeline to continue even if linting fails
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -49,12 +50,11 @@ jobs:
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.56.2
           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
-      - name: Run golangci-lint
+      - name: Run golangci-lint with ignore flags
         working-directory: ./src/checkout
         run: |
             go mod tidy
-            golangci-lint run ./... --timeout 5m
-        continue-on-error: true
+            golangci-lint run ./... --timeout 5m --disable errcheck --disable gosimple
 
   # ✅ Stage 4: Docker Build, Trivy Scan, and Push to Google Artifact Registry
   docker-build-push:
