--- a/kubernetes/frontend/deploy.yaml
+++ b/kubernetes/frontend/deploy.yaml
@@ -31,7 +31,7 @@ spec:
       serviceAccountName: opentelemetry-demo
       containers:
         - name: frontend
-          image: neamulkabiremon/frontend:22a06baa481caf2898d78bfe983f724bbb46f59f
+          image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/frontend:22a06baa481caf2898d78bfe983f724bbb46f59f
           imagePullPolicy: IfNotPresent
           ports:
             
