--- a/kubernetes/recommendation/deploy.yaml
+++ b/kubernetes/recommendation/deploy.yaml
@@ -31,7 +31,7 @@ spec:
       serviceAccountName: opentelemetry-demo
       containers:
         - name: recommendationservice
-          image: neamulkabiremon/recommendation:963d0f438b40369fa5a21e9f0bac9581b85171bc
+          image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/recommendationservice:963d0f438b40369fa5a21e9f0bac9581b85171bc
           imagePullPolicy: IfNotPresent
           ports:
             
