--- a/.github/workflows/recommendation.yaml
+++ b/.github/workflows/recommendation.yaml
@@ -1,8 +1,8 @@
 name: recommendation-service-ci
 
 on:
-  pull_request:
-    branches: [main]
+  # pull_request:
+  #   branches: [main]
   push:
     paths:
       - '.github/workflows/recommendation.yaml'
@@ -92,12 +92,12 @@ jobs:
         run: |
           docker push asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/recommendationservice:${{ github.sha }}
 
-  # ✅ 4. Update Kubernetes Manifest with New Image
-  k8s-update:
+  # ✅ 4+5. Update K8s Manifest and Commit+Push
+  update-k8s-and-push:
     runs-on: ubuntu-latest
     needs: docker-build-push
     steps:
-      - name: Checkout code
+      - name: Checkout repo with write access
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
@@ -107,18 +107,10 @@ jobs:
           sed -i "s|image: .*|image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/recommendationservice:${{ github.sha }}|" kubernetes/recommendation/deploy.yaml
           cat kubernetes/recommendation/deploy.yaml
 
-  # ✅ 5. Commit & Push Updated YAML
-  commit-and-push:
-    runs-on: ubuntu-latest
-    needs: k8s-update
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Commit updated manifest
+      - name: Commit and Push updated manifest
         run: |
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "mokadi surya prasad"
           git add kubernetes/recommendation/deploy.yaml
-          git commit -m "[CI]: Update recommendation deployment image tag"
-          git push origin main  # Updated push target to 'main' branch
+          git commit -m "[CI]: Update recommendation deployment image tag" || echo "No changes to commit"
+          git push origin main
