--- a/.github/workflows/terraform-gke.yml
+++ b/.github/workflows/terraform-gke.yml
@@ -3,10 +3,10 @@ name: Terraform GKE on Google Cloud
 on:
   push:
     branches:
-      - main  # Triggers on pushes to 'main' branch (or any branch you want)
+      - main
     paths:
-      - '.github/workflows/terraform-gke.yml'  # Triggers when the workflow file changes
-      - 'terraform-gke/**'  # Triggers when any file in the terraform-gke directory changes
+      - '.github/workflows/terraform-gke.yml'
+      - 'terraform-gke/**'
   workflow_dispatch:
     inputs:
       action:
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Terraform (N-1 version)
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: "1.5.6"  # N-1 version (assuming latest stable is 1.5.7)
+          terraform_version: "1.5.6"  # N-1 version
 
       - name: Set up Google Cloud credentials
         uses: google-github-actions/auth@v1
@@ -44,26 +44,30 @@ jobs:
           export_default_credentials: true
 
       - name: Install Google provider version ~> 6.0 (N-1 version)
-        run: terraform init -upgrade  # Ensures the latest compatible version of the provider is used
+        run: terraform init -upgrade
 
       - name: Terraform Init
+        working-directory: ./terraform-gke  # Ensure working directory is set to where your .tf files are
         run: terraform init
 
       - name: Terraform Validate
+        working-directory: ./terraform-gke
         run: terraform validate
 
       - name: Terraform Plan
+        working-directory: ./terraform-gke
         run: terraform plan -out=tfplan
 
       # Apply or Destroy based on the input choice
       - name: Terraform Apply
-        if: ${{ github.event.inputs.action == 'apply' }}  # Only runs if action is 'apply'
+        if: ${{ github.event.inputs.action == 'apply' }}
+        working-directory: ./terraform-gke
         run: terraform apply -auto-approve tfplan
 
   terraform-destroy:
     name: Terraform Destroy
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.action == 'destroy' }}  # Only runs if action is 'destroy'
+    if: ${{ github.event.inputs.action == 'destroy' }}
 
     steps:
       - name: Checkout code
@@ -72,7 +76,7 @@ jobs:
       - name: Set up Terraform (N-1 version)
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: "1.5.6"  # N-1 version (assuming latest stable is 1.5.7)
+          terraform_version: "1.5.6"
 
       - name: Set up Google Cloud credentials
         uses: google-github-actions/auth@v1
@@ -86,10 +90,12 @@ jobs:
           export_default_credentials: true
 
       - name: Install Google provider version ~> 6.0 (N-1 version)
-        run: terraform init -upgrade  # Ensures the latest compatible version of the provider is used
+        run: terraform init -upgrade
 
       - name: Terraform Init
+        working-directory: ./terraform-gke
         run: terraform init
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve  # Destroys infrastructure if 'destroy' is selected
+        working-directory: ./terraform-gke
+        run: terraform destroy -auto-approve
