--- a/.github/workflows/terraform-gke.yml
+++ b/.github/workflows/terraform-gke.yml
@@ -27,53 +27,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Terraform (N-1 version)
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: "1.5.6"  # N-1 version
-
-      - name: Set up Google Cloud credentials
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
-        with:
-          project_id: "silken-oxygen-454215-v6"
-          export_default_credentials: true
-
-      - name: Install Google provider version ~> 6.0 (N-1 version)
-        run: terraform init -upgrade
-
-      - name: Terraform Init
-        working-directory: ./terraform-gke  # Ensure working directory is set to where your .tf files are
-        run: terraform init
-
-      - name: Terraform Validate
-        working-directory: ./terraform-gke
-        run: terraform validate
-
-      - name: Terraform Plan
-        working-directory: ./terraform-gke
-        run: terraform plan -out=tfplan
-
-      # Apply or Destroy based on the input choice
-      - name: Terraform Apply
-        if: ${{ github.event.inputs.action == 'apply' }}
-        working-directory: ./terraform-gke
-        run: terraform apply -auto-approve tfplan
-
-  terraform-destroy:
-    name: Terraform Destroy
-    runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.action == 'destroy' }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Terraform (N-1 version)
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: "1.5.6"
@@ -89,8 +43,47 @@ jobs:
           project_id: "silken-oxygen-454215-v6"
           export_default_credentials: true
 
-      - name: Install Google provider version ~> 6.0 (N-1 version)
-        run: terraform init -upgrade
+      - name: Terraform Init
+        working-directory: ./terraform-gke
+        run: terraform init
+
+      - name: Terraform Validate
+        working-directory: ./terraform-gke
+        run: terraform validate
+
+      - name: Terraform Plan
+        working-directory: ./terraform-gke
+        run: terraform plan
+
+      - name: Terraform Apply
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'apply' || github.event_name == 'push'
+        working-directory: ./terraform-gke
+        run: terraform apply -auto-approve
+
+  terraform-destroy:
+    name: Terraform Destroy
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'destroy'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.5.6"
+
+      - name: Set up Google Cloud credentials
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: "silken-oxygen-454215-v6"
+          export_default_credentials: true
 
       - name: Terraform Init
         working-directory: ./terraform-gke
