--- a/.github/workflows/terraform-gke.yml
+++ b/.github/workflows/terraform-gke.yml
@@ -12,7 +12,7 @@ on:
       action:
         description: 'Terraform action to perform'
         required: true
-        default: 'apply'
+        default: 'destroy'
         type: choice
         options:
           - apply
