--- a/.github/workflows/terraform-gke.yml
+++ b/.github/workflows/terraform-gke.yml
@@ -19,46 +19,46 @@ on:
           - destroy
 
 jobs:
-  terraform:
-    name: Terraform Deployment and Management
-    runs-on: ubuntu-latest
+  # terraform:
+  #   name: Terraform Deployment and Management
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: "1.5.6"
+  #     - name: Set up Terraform
+  #       uses: hashicorp/setup-terraform@v3
+  #       with:
+  #         terraform_version: "1.5.6"
 
-      - name: Set up Google Cloud credentials
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+  #     - name: Set up Google Cloud credentials
+  #       uses: google-github-actions/auth@v1
+  #       with:
+  #         credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
-        with:
-          project_id: "silken-oxygen-454215-v6"
-          export_default_credentials: true
+  #     - name: Set up Google Cloud SDK
+  #       uses: google-github-actions/setup-gcloud@v1
+  #       with:
+  #         project_id: "silken-oxygen-454215-v6"
+  #         export_default_credentials: true
 
-      - name: Terraform Init
-        working-directory: ./terraform-gke
-        run: terraform init
+  #     - name: Terraform Init
+  #       working-directory: ./terraform-gke
+  #       run: terraform init
 
-      - name: Terraform Validate
-        working-directory: ./terraform-gke
-        run: terraform validate
+  #     - name: Terraform Validate
+  #       working-directory: ./terraform-gke
+  #       run: terraform validate
 
-      - name: Terraform Plan
-        working-directory: ./terraform-gke
-        run: terraform plan
+  #     - name: Terraform Plan
+  #       working-directory: ./terraform-gke
+  #       run: terraform plan
 
-      - name: Terraform Apply
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'apply' || github.event_name == 'push'
-        working-directory: ./terraform-gke
-        run: terraform apply -auto-approve
+  #     - name: Terraform Apply
+  #       if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'apply' || github.event_name == 'push'
+  #       working-directory: ./terraform-gke
+  #       run: terraform apply -auto-approve
 
   terraform-destroy:
     name: Terraform Destroy
