--- a/.github/workflows/terraform-gke.yml
+++ b/.github/workflows/terraform-gke.yml
@@ -12,7 +12,7 @@ on:
       confirm_destroy:
         description: "Type 'yes' to confirm destruction"
         required: true
-        default: 'yes'
+        default: 'no'
 
 jobs:
   terraform-destroy:
