--- a/kubernetes/frontend/deploy.yaml
+++ b/kubernetes/frontend/deploy.yaml
@@ -5,7 +5,7 @@ kind: Deployment
 metadata:
   name: opentelemetry-demo-frontend
   labels:
-    
+
     opentelemetry.io/name: opentelemetry-demo-frontend
     app.kubernetes.io/instance: opentelemetry-demo
     app.kubernetes.io/component: frontend
@@ -17,12 +17,12 @@ spec:
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      
+
       opentelemetry.io/name: opentelemetry-demo-frontend
   template:
     metadata:
       labels:
-        
+
         opentelemetry.io/name: opentelemetry-demo-frontend
         app.kubernetes.io/instance: opentelemetry-demo
         app.kubernetes.io/component: frontend
@@ -30,61 +30,61 @@ spec:
     spec:
       serviceAccountName: opentelemetry-demo
       containers:
-        - name: frontend
-          image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/frontend:fb6c3cf69e3310c1c8d047c1ee7d133d8c3cd688
-          imagePullPolicy: IfNotPresent
-          ports:
-            
-            - containerPort: 8080
-              name: service
-          env:
-            - name: OTEL_SERVICE_NAME
-              valueFrom:
-                fieldRef:
-                  apiVersion: v1
-                  fieldPath: metadata.labels['app.kubernetes.io/component']
-            - name: OTEL_COLLECTOR_NAME
-              value: 'opentelemetry-demo-otelcol'
-            - name: OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE
-              value: cumulative
-            - name: FRONTEND_PORT
-              value: "8080"
-            - name: FRONTEND_ADDR
-              value: :8080
-            - name: AD_SERVICE_ADDR
-              value: 'opentelemetry-demo-adservice:8080'
-            - name: CART_SERVICE_ADDR
-              value: 'opentelemetry-demo-cartservice:8080'
-            - name: CHECKOUT_SERVICE_ADDR
-              value: 'opentelemetry-demo-checkoutservice:8080'
-            - name: CURRENCY_SERVICE_ADDR
-              value: 'opentelemetry-demo-currencyservice:8080'
-            - name: PRODUCT_CATALOG_SERVICE_ADDR
-              value: 'opentelemetry-demo-productcatalogservice:8080'
-            - name: RECOMMENDATION_SERVICE_ADDR
-              value: 'opentelemetry-demo-recommendationservice:8080'
-            - name: SHIPPING_SERVICE_ADDR
-              value: 'opentelemetry-demo-shippingservice:8080'
-            - name: FLAGD_HOST
-              value: 'opentelemetry-demo-flagd'
-            - name: FLAGD_PORT
-              value: "8013"
-            - name: OTEL_COLLECTOR_HOST
-              value: $(OTEL_COLLECTOR_NAME)
-            - name: OTEL_EXPORTER_OTLP_ENDPOINT
-              value: http://$(OTEL_COLLECTOR_NAME):4317
-            - name: WEB_OTEL_SERVICE_NAME
-              value: frontend-web
-            - name: PUBLIC_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
-              value: http://localhost:8080/otlp-http/v1/traces
-            - name: OTEL_RESOURCE_ATTRIBUTES
-              value: service.name=$(OTEL_SERVICE_NAME),service.namespace=opentelemetry-demo,service.version=1.12.0
-          resources:
-            limits:
-              memory: 250Mi
-          securityContext:
-            runAsGroup: 1001
-            runAsNonRoot: true
-            runAsUser: 1001
-          volumeMounts:
+      - name: frontend
+        image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/frontend@sha256:21c469af88d9dc970dedf40ce544d06ce5c2f33792a74b9b716789fb76bb5350
+        imagePullPolicy: IfNotPresent
+        ports:
+
+        - containerPort: 8080
+          name: service
+        env:
+        - name: OTEL_SERVICE_NAME
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: metadata.labels['app.kubernetes.io/component']
+        - name: OTEL_COLLECTOR_NAME
+          value: 'opentelemetry-demo-otelcol'
+        - name: OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE
+          value: cumulative
+        - name: FRONTEND_PORT
+          value: "8080"
+        - name: FRONTEND_ADDR
+          value: :8080
+        - name: AD_SERVICE_ADDR
+          value: 'opentelemetry-demo-adservice:8080'
+        - name: CART_SERVICE_ADDR
+          value: 'opentelemetry-demo-cartservice:8080'
+        - name: CHECKOUT_SERVICE_ADDR
+          value: 'opentelemetry-demo-checkoutservice:8080'
+        - name: CURRENCY_SERVICE_ADDR
+          value: 'opentelemetry-demo-currencyservice:8080'
+        - name: PRODUCT_CATALOG_SERVICE_ADDR
+          value: 'opentelemetry-demo-productcatalogservice:8080'
+        - name: RECOMMENDATION_SERVICE_ADDR
+          value: 'opentelemetry-demo-recommendationservice:8080'
+        - name: SHIPPING_SERVICE_ADDR
+          value: 'opentelemetry-demo-shippingservice:8080'
+        - name: FLAGD_HOST
+          value: 'opentelemetry-demo-flagd'
+        - name: FLAGD_PORT
+          value: "8013"
+        - name: OTEL_COLLECTOR_HOST
+          value: $(OTEL_COLLECTOR_NAME)
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: http://$(OTEL_COLLECTOR_NAME):4317
+        - name: WEB_OTEL_SERVICE_NAME
+          value: frontend-web
+        - name: PUBLIC_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
+          value: http://localhost:8080/otlp-http/v1/traces
+        - name: OTEL_RESOURCE_ATTRIBUTES
+          value: service.name=$(OTEL_SERVICE_NAME),service.namespace=opentelemetry-demo,service.version=1.12.0
+        resources:
+          limits:
+            memory: 250Mi
+        securityContext:
+          runAsGroup: 1001
+          runAsNonRoot: true
+          runAsUser: 1001
+        volumeMounts:
       volumes:
