--- a/kubernetes/frontend/svc.yaml
+++ b/kubernetes/frontend/svc.yaml
@@ -5,7 +5,7 @@ kind: Service
 metadata:
   name: opentelemetry-demo-frontend
   labels:
-    
+
     opentelemetry.io/name: opentelemetry-demo-frontend
     app.kubernetes.io/instance: opentelemetry-demo
     app.kubernetes.io/component: frontend
@@ -13,11 +13,11 @@ metadata:
     app.kubernetes.io/version: "1.12.0"
     app.kubernetes.io/part-of: opentelemetry-demo
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
-    - port: 8080
-      name: tcp-service
-      targetPort: 8080
+  - port: 8080
+    name: tcp-service
+    targetPort: 8080
   selector:
-    
+
     opentelemetry.io/name: opentelemetry-demo-frontend
