[CI] Update frontend image tag to 8e430ec8f975c5999473ee3c125ce7148772e168

--- a/kubernetes/frontend/deploy.yaml
+++ b/kubernetes/frontend/deploy.yaml
@@ -31,7 +31,7 @@ spec:
       serviceAccountName: opentelemetry-demo
       containers:
       - name: frontend
-        image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/frontend@sha256:21c469af88d9dc970dedf40ce544d06ce5c2f33792a74b9b716789fb76bb5350
+        image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/frontend:8e430ec8f975c5999473ee3c125ce7148772e168
         ports:
 
         - containerPort: 8080
