--- a/kubernetes/frontend/deploy.yaml
+++ b/kubernetes/frontend/deploy.yaml
@@ -31,7 +31,7 @@ spec:
       serviceAccountName: opentelemetry-demo
       containers:
       - name: frontend
-        image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/frontend@sha256:12c394da6f0023d8af0c794a9920c31339d2ac21fc290262f5cf6b3d00fa5f3f
+        image: asia-south1-docker.pkg.dev/silken-oxygen-454215-v6/microservices-demo/frontend:9facf2fb4ceae735cab0f8471ffa83660b923b63
         ports:
 
         - containerPort: 8080
